configs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: civilization
  annotations:
     mode: dev
