configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $app_name
  labels:
    app: $app_name
  namespace: civilization
  annotations:
    mode: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $app_name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy-port
        app: $app_name
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - image: docker.io/vaider/civilization:users_service
          name: $app_name
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: /cominder
              name: project-volume
      volumes:
        - name: project-volume
          hostPath:
            path: $HOME/cominder
