configs/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: civilization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - image: docker.io/vaider/civilization:frontend
          name: frontend
          imagePullPolicy: Always
          # command: ["trunk"]
          # args: ["watch", "--features", "dev", "-d", "./services/frontend/dist", "./services/frontend/index.html"]
          ports:
          - containerPort: 80
            name: port-80
          volumeMounts:
            - mountPath: /cominder
              name: project-volume
      volumes:
        - name: project-volume
          hostPath:
            path: $HOME/cominder
