configs/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector: 
    app: kubernetes-dashboard
  type: NodePort  
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 32001
