configs/hubble-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-service
spec:
  selector: 
    app: hubble-ui
  type: NodePort  
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32001
