configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector: 
    app: proxy-port
  ports:
    - port: 80
      targetPort: 80
